--- a/akshata.html
+++ b/akshata.html
@@ -6,11 +6,13 @@
 <style>   
 Body {  
   font-family: Calibri, Helvetica, sans-serif;  
-  background-color: pink;  
+  background-color: yellow;  
+}
      
  .container {   
         padding: 25px;   
         background-color: lightblue;  
+        margin: 10px;
     }   
 </style>   
 </head>    
